<resources>
    <string name="app_name">Android_Prakt_3</string>
    <string name="go_to_2nd">Go to 2nd</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="input">Input</string>
    <string name="read">Read Storage</string>
    <string name="output">Output</string>
    <string-array name="light_themes">
        <item>Default</item>
        <item>Light theme</item>
        <item>Dark theme</item>
    </string-array>
</resources>